src/gallium/drivers/r600/r600_uvd.c
@@ -184,10 +184,21 @@ int r600_uvd_get_video_param(struct pipe_screen *screen,
 {
 	struct r600_screen *rscreen = (struct r600_screen *)screen;
 
-	/* No support for MPEG4 on UVD 2.x */
-	if (param == PIPE_VIDEO_CAP_SUPPORTED && rscreen->family < CHIP_PALM &&
-	    u_reduce_video_profile(profile) == PIPE_VIDEO_CODEC_MPEG4)
-		return false;
+	/* UVD 2.x limits */
+	if (rscreen->family < CHIP_PALM) {
+		enum pipe_video_codec codec = u_reduce_video_profile(profile);
+		switch (param) {
+		case PIPE_VIDEO_CAP_SUPPORTED:
+			/* no support for MPEG4 */
+	    		return codec != PIPE_VIDEO_CODEC_MPEG4;
+        	case PIPE_VIDEO_CAP_PREFERS_INTERLACED:
+        	case PIPE_VIDEO_CAP_SUPPORTS_INTERLACED:
+			/* and MPEG2 only with shaders */
+	    		return codec != PIPE_VIDEO_CODEC_MPEG12;
+		default:
+			break;
+		}
+	}
 
 	return ruvd_get_video_param(screen, profile, param);
 }
